<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.nativebaseproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action android:id="@+id/action_open_testFragment"
            app:destination="@id/fragment_test"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.nativebaseproject.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.nativebaseproject.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/fragment_test"
        android:name="com.example.nativebaseproject.ui.test.TestFragment"
        android:label="Test Fragment"
        tools:layout="@layout/fragment_test"/>

</navigation>