<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_dark_mode_on"
            android:text="@string/turn_on"
            style="@style/DarkModeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/radio_dark_mode_off"
            android:text="@string/turn_off"
            style="@style/DarkModeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/radio_use_system_setting"
            style="@style/DarkModeTextStyle"
            android:text="@string/using_system_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>